--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:27.1.1'
     implementation 'android.arch.persistence.room:runtime:1.1.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
     testImplementation 'junit:junit:4.12'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
